--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,15 @@
 spring.application.name=semana11-modulo1
 
+jwt.public.key = classpath:app.pub
+jwt.private.key = classpath:app.key
 
+spring.sql.init.mode=always
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:teste
 spring.datasource.username=sa
 spring.datasource.password=
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
